Fixed exit symbol on small screens.

--- a/src/css/details.css
+++ b/src/css/details.css
@@ -122,7 +122,7 @@
 
 @media screen and (max-width: 700px) {
   .details-exit {
-    padding: 2.4rem;
+    margin: 2.4rem;
   }
 
   .details-container {
